<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.android.cdlist.ui.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_BasicImplFragment"
            app:destination="@id/BasicImplFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_BasicImplCoilFragment"
            app:destination="@id/BasicImplCoilFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_CustomImplFragment"
            app:destination="@id/CustomImplFragment" />
    </fragment>
    <fragment
        android:id="@+id/BasicImplFragment"
        android:name="com.android.cdlist.ui.BasicImplFragment"
        android:label="@string/basic_impl_fragment_label"
        tools:layout="@layout/fragment_basic_impl"/>
    <fragment
        android:id="@+id/BasicImplCoilFragment"
        android:name="com.android.cdlist.ui.BasicImplCoilFragment"
        android:label="@string/basic_impl_coil_fragment_label"
        tools:layout="@layout/fragment_basic_impl"/>
    <fragment
        android:id="@+id/CustomImplFragment"
        android:name="com.android.cdlist.ui.CustomImplFragment"
        android:label="@string/custom_imp_fragment_label"
        tools:layout="@layout/fragment_custom_impl"/>
</navigation>